# irlab_plot_lib

./: '  CMakeLists.txt  LICENSE  README.md  irplotlib.cpp  irplotlib.h  main.cpp  main.py
samples/: CMakeLists.txt  draw_function.cpp  draw_line.cpp  scatter_plot.cpp
